--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,16 @@ Safekeeping of Securities       |BPS002
 SSL Account Maintanance Fee     |BPS003
 US Equities Commission          |BPS004
 Options Commission              |BPS005
+
+
+Account Maintenance (JHA - DDA)
+Hold Mail Services
+Outgoing Wire Transfers
+ (USD/Foreign Exchange)- Manual
+Outgoing Wire Transfers
+ (USD/Foreign Exchange)-Online/token
+Safekeeping of Securities
+SSL Account Maintenance Fee
+US Equities
+Equity Options
+
