--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,144 @@
-Fee Name	Code
-FX Outgoing Wire Fee	JH006
-FX Outgoing Wire (SafraLink) Fee	JH007
-Safekeeping of Securities	BPS002
-SSL Account Maintanance Fee	BPS003
-US Equities Commission	BPS004
-Options Commission	BPS005
-Account Maintenance Fee	JH001
-Hold Mail Fee	JH002
-Account Maintenance (JHA - DDA)	
-Hold Mail Services	
-Outgoing Wire Transfers (USD/Foreign Exchange)- Manual	
-Outgoing Wire Transfers (USD/Foreign Exchange)-Online/token	
-Safekeeping of Securities	
-SSL Account Maintenance Fee	
-US Equities	
-Equity Options	
-Account Maintenance	1
-Hold Mail	2
-Incoming Wire	3
-Outgoing Wire	4
-Safekeeping-Custody	6
-SSL Account Maintenance	5
-Equity and Options Comission	7
+import Result from '#features/shared/result.js';
+
+export default class FeeCaseGetByCifUseCase {
+  async execute({ cif }, feeManagementModel, customerModel) {
+    const [errCustomer, responseCustomer] = await customerModel.getCustomerDetailsByCif(cif);
+    if (errCustomer) {
+      return Result.fail({ message: "It's not possible to get address cif" });
+    }
+
+    const customerData = responseCustomer?.data?.customer || {};
+    const [errFee, responseFee] = await feeManagementModel.getFeeByAccount(customerData);
+    if (errFee) {
+      return Result.fail({ message: "It's not possible to get fee values" });
+    }
+
+    function normalizeFeeName(text) {
+      return text
+        .replace(/([a-z])([A-Z])/g, '$1 $2')
+        .replace(/[_-]/g, ' ')
+        .trim();
+    }
+
+    const feesData = responseFee?.data || {};
+    const timestamp = new Date().toISOString();
+
+    const packageName = feesData.feePackage || "N/A";
+    const packageType = feesData.defaultPackageType || "N/A";
+    const branchType = feesData.branchType || "N/A";
+
+    const currentFees = [
+      ...(customerData?.customerCurrentFees?.map(x => ({
+        feeDescription: x.feeDescription || '',
+        feeCode: x.feeCode || ''
+      })) || []),
+      ...(feesData?.currentFees || [])
+    ];
+
+    const feeTypeMap = {
+      1: "Customer Fees",
+      2: "Bank Account Fees",
+      3: "Investment Account Fees"
+    };
+
+    const feeCodeMap = {
+      "Account Maintenance": 1,
+      "Hold Mail": 2,
+      "Incoming Wire": 3,
+      "Outgoing Wire": 4,
+      "Safekeeping Custody": 6,
+      "SSL Account Maintenance": 5,
+      "Equity and Options Commission": 7,
+      "FX Outgoing Wire Fee": 8,
+      "US Equities Commission": 10,
+      "Options Commission": 11
+    };
+
+    const rawCustomerAccounts = customerData?.customerAccount || [];
+
+    const filteredCustomerAccounts = rawCustomerAccounts.filter(fee => {
+      const feeTypeString = feeTypeMap[fee.feeType] || "";
+      return ["Customer Fees", "Bank Account Fees", "Investment Account Fees"].includes(feeTypeString);
+    });
+
+    const formattedFees = filteredCustomerAccounts.map(fee => {
+      const normalizedFeeName = normalizeFeeName(fee.feeDescription);
+      return {
+        feeGroups: [{
+          name: fee.feeGroup === 1 ? "Client Current Fees" : "Standard Fees",
+          visible: true,
+          kycMailingStatus: fee.kycMailingStatus || null,
+          code: fee.feeCode || "",
+          accountNumber: fee.ddaNumber || "",
+          cif: fee.cifno || "",
+          id: '',
+          fields: [{
+            hasChanged: false,
+            code: feeCodeMap[normalizedFeeName] || fee.feeCode || "",
+            name: normalizedFeeName,
+            defaultValue: fee.feeAmount?.toString() || '',
+            isStandard: fee.isFeesStandard === "Yes",
+            isException: fee.isFeesStandard === "No",
+            isCurrentClient: false,
+            labelValue: fee.feeAmount ? `$${fee.feeAmount.toFixed(2)}` : '',
+            tooltip: fee.source ? `Source: ${fee.source}` : '',
+            exceptionOptions: [],
+            createdAt: timestamp,
+            updatedAt: timestamp,
+            id: fee.ddaNumber?.toString() || ""
+          }]
+        }],
+        feeType: feeTypeMap[fee.feeType] || "",
+        id: '',
+      };
+    });
+
+    const formattedFeeGroups = feesData?.fees
+      ?.filter(feeGroup => ["Customer Fees", "Bank Account Fees", "Investment Account Fees"].includes(feeGroup.feeType))
+      .map(feeGroup => ({
+        ...feeGroup,
+        id: '',
+        feeGroups: feeGroup.feeGroups.map(group => ({
+          ...group,
+          id: group.id || '',
+          cif: group.cif || '',
+          accountNumber: group.accountNumber || '',
+          fields: group.fields.map(field => ({
+            ...field,
+            hasChanged: field.hasChanged || false,
+            createdAt: field.createdAt || timestamp,
+            updatedAt: field.updatedAt || timestamp,
+            id: field._id || field.id || '',
+            exceptionOptions: field.exceptionOptions?.map(opt => ({
+              ...opt,
+              parameterOptionId: opt.parameterOptionId || '',
+            })) || []
+          }))
+        }))
+      })) || [];
+
+    const result = {
+      customerName: customerData?.customerAddress?.name || feesData?.customerName || '',
+      customerShortName: feesData?.customerShortName || '',
+      customerAddress: customerData?.customerAddress?.address || '',
+      customerAccountOfficer: customerData?.customerAddress?.officer || '',
+      cif: customerData?.customerAddress?.cif || cif,
+      officerId: feesData?.officerId || '',
+      branchCity: feesData?.branchCity || '',
+      branchState: feesData?.branchState || '',
+      branchType,
+      feePackage: feesData?.feePackage || '',
+      defaultFeePackageId: feesData?.defaultFeePackageId || '',
+      defaultPackageType: feesData?.defaultPackageType || '',
+      packageName,
+      packageType,
+      fees: [...formattedFees, ...formattedFeeGroups],
+      feesActives: feesData?.feesActives || [],
+      documentUrl: feesData?.documentUrl || '',
+      currentFees
+    };
+
+    global.logger.info('End process');
+    return Result.ok(result);
+  }
+}
