--- a/.gitignore
+++ b/.gitignore
@@ -71,11 +71,11 @@ export default class FeeCaseGetByCifUseCase {
     const formattedFees = filteredCustomerAccounts.map(fee => {
       const normalizedFeeName = normalizeFeeName(fee.feeDescription);
       return {
+        // Definimos o feeType padronizado
         feeType: feeTypeMap[fee.feeType] || "",
+        // Aqui vem um array de 'feeGroups'
         feeGroups: [
           {
-            // Aqui assumimos que, se fee.feeGroup === 1, então é "Client Current Fees"
-            // se não, é "Standard Fees". Você pode alterar a lógica conforme sua necessidade.
             name: fee.feeGroup === 1 ? "Client Current Fees" : "Standard Fees",
             visible: true,
             kycMailingStatus: fee.kycMailingStatus || null,
@@ -117,6 +117,7 @@ export default class FeeCaseGetByCifUseCase {
         .map(feeGroup => ({
           feeType: feeGroup.feeType,
           id: "",
+          // Ajuste cada 'feeGroups' contido dentro
           feeGroups: feeGroup.feeGroups.map(group => ({
             ...group,
             id: group.id || "",
@@ -137,7 +138,8 @@ export default class FeeCaseGetByCifUseCase {
           }))
         })) || [];
 
-    // Juntamos ambos em um só array
+    // Agora vamos agrupar TUDO por feeType.
+    // Primeiro unimos formattedFees e formattedFeeGroups num único array:
     const allFees = [...formattedFees, ...formattedFeeGroups];
 
     // Defina os 3 feeTypes que você quer exibir/retornar
@@ -147,47 +149,17 @@ export default class FeeCaseGetByCifUseCase {
       "Investment Account Fees"
     ];
 
-    // 1) Agrupar por feeType
+    // Fazemos o "group by" para cada feeType de interesse
     const groupedFees = feeTypesToGroup.map(type => {
-      // Filtra tudo que tiver esse feeType
+      // Filtramos tudo que tiver esse feeType
       const itemsOfThisType = allFees.filter(item => item.feeType === type);
 
       // Unir todos os feeGroups desses itens
       const combinedFeeGroups = itemsOfThisType.flatMap(item => item.feeGroups || []);
 
-      // 2) Agora vamos agrupar esses feeGroups pelo "name", que pode ser:
-      // "Standard Fees", "Client Current Fees" ou "Exception Request".
-      // Você pode adaptar conforme sua regra de negócio.
-      const groupByName = {
-        "Standard Fees": [],
-        "Client Current Fees": [],
-        "Exception Request": []
-      };
-
-      // Distribui cada feeGroup para o array correto conforme o "name"
-      for (const group of combinedFeeGroups) {
-        if (group.name === "Standard Fees") {
-          groupByName["Standard Fees"].push(group);
-        } else if (group.name === "Client Current Fees") {
-          groupByName["Client Current Fees"].push(group);
-        } else {
-          // Qualquer outro nome, joga em "Exception Request"
-          groupByName["Exception Request"].push(group);
-        }
-      }
-
-      // Monta o array final com os 3 possíveis nomes
-      // e só exibe se tiver algo dentro (ou você pode manter vazio se quiser)
-      const feeGroupsGroupedByName = Object.entries(groupByName)
-        .map(([key, value]) => ({
-          name: key,       // "Standard Fees", "Client Current Fees", ...
-          feeGroups: value // array de objetos daquela categoria
-        }))
-        .filter(item => item.feeGroups.length > 0); 
-
       return {
         feeType: type,
-        feeGroups: feeGroupsGroupedByName
+        feeGroups: combinedFeeGroups
       };
     });
 
@@ -207,7 +179,8 @@ export default class FeeCaseGetByCifUseCase {
       defaultPackageType: feesData?.defaultPackageType || '',
       packageName,
       packageType,
-      fees: groupedFees,          // <-- Agora sim, agrupado por feeType e por nome
+      // Aqui, em vez de espalhar tudo junto, retornamos já agrupado
+      fees: groupedFees,
       feesActives: feesData?.feesActives || [],
       documentUrl: feesData?.documentUrl || '',
       currentFees
